Bug 898864 - RTSP content process crash when press the play button at the end of video. r=sworkman