netwerk/protocol/rtsp/controller/RtspControllerParent.cpp
@@ -19,6 +19,13 @@ PRLogModuleInfo* gRtspLog;
 #undef LOG
 #define LOG(args) PR_LOG(gRtspLog, PR_LOG_DEBUG, args)
 
+#define SEND_DISCONNECT_IF_ERROR(rv)                         \
+  if (NS_FAILED(rv) && mIPCOpen && mTotalTracks > 0) {       \
+    for (int i = 0; i < mTotalTracks; i++) {                 \
+      SendOnDisconnected(i, rv);                             \
+    }                                                        \
+  }
+
 using namespace mozilla::ipc;
 
 namespace mozilla {
@@ -30,6 +37,7 @@ NS_IMPL_ISUPPORTS2(RtspControllerParent,
 
 RtspControllerParent::RtspControllerParent()
   : mIPCOpen(true)
+  , mTotalTracks(0)
 {
 #if defined(PR_LOGGING)
   if (!gRtspLog)
@@ -75,7 +83,7 @@ RtspControllerParent::RecvPlay()
   NS_ENSURE_TRUE(mController, true);
 
   nsresult rv = mController->Play();
-  NS_ENSURE_SUCCESS(rv, true);
+  SEND_DISCONNECT_IF_ERROR(rv)
   return true;
 }
 
@@ -86,7 +94,7 @@ RtspControllerParent::RecvPause()
   NS_ENSURE_TRUE(mController, true);
 
   nsresult rv = mController->Pause();
-  NS_ENSURE_SUCCESS(rv, true);
+  SEND_DISCONNECT_IF_ERROR(rv)
   return true;
 }
 
@@ -97,7 +105,7 @@ RtspControllerParent::RecvResume()
   NS_ENSURE_TRUE(mController, true);
 
   nsresult rv = mController->Resume();
-  NS_ENSURE_SUCCESS(rv, true);
+  SEND_DISCONNECT_IF_ERROR(rv)
   return true;
 }
 
@@ -108,7 +116,7 @@ RtspControllerParent::RecvSuspend()
   NS_ENSURE_TRUE(mController, true);
 
   nsresult rv = mController->Suspend();
-  NS_ENSURE_SUCCESS(rv, true);
+  SEND_DISCONNECT_IF_ERROR(rv)
   return true;
 }
 
@@ -119,7 +127,7 @@ RtspControllerParent::RecvSeek(const uint64_t& offset)
   NS_ENSURE_TRUE(mController, true);
 
   nsresult rv = mController->Seek(offset);
-  NS_ENSURE_SUCCESS(rv, true);
+  SEND_DISCONNECT_IF_ERROR(rv)
   return true;
 }
 
@@ -183,9 +191,9 @@ RtspControllerParent::OnConnected(uint8_t index,
   InfallibleTArray<RtspMetadataParam> metaData;
   nsCString name;
   name.AssignLiteral("TRACKS");
-  nsresult rv = meta->GetTotalTracks(&int32Value);
+  nsresult rv = meta->GetTotalTracks(&mTotalTracks);
   NS_ENSURE_SUCCESS(rv, NS_ERROR_FAILURE);
-  metaData.AppendElement(RtspMetadataParam(name, int32Value));
+  metaData.AppendElement(RtspMetadataParam(name, mTotalTracks));
 
   name.AssignLiteral("MIMETYPE");
   nsCString mimeType;
